--- a/src/Core/ReportCenter.Core/ReportCenter.Core.csproj
+++ b/src/Core/ReportCenter.Core/ReportCenter.Core.csproj
@@ -8,6 +8,7 @@
     <ProjectReference Include="..\ReportCenter.Common\ReportCenter.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0" />
