--- a/src/Apps/ReportCenter.App.Domain.Application.Worker/appsettings.json
+++ b/src/Apps/ReportCenter.App.Domain.Application.Worker/appsettings.json
@@ -2,11 +2,16 @@
   "ConnectionStrings": {
     "CoreDbContext": "",
     "GrpcServer": "",
-    "RabbitMQ": ""
+    "RabbitMQ": "",
+    "ServiceBus": ""
   },
   "MongoDBName": "",
   "RabbitMQ": {
     "QueueName": ""
+  },
+  "AzureServiceBus": {
+    "TopicName": "",
+    "SubscriptionName": ""
   },
   "EnvironmentName": "DEV",
   "ServiceName": "ReportCenterExportWorker",
