--- a/src/Apps/ReportCenter.App.RestServer/appsettings.json
+++ b/src/Apps/ReportCenter.App.RestServer/appsettings.json
@@ -1,11 +1,16 @@
 {
   "ConnectionStrings": {
     "CoreDbContext": "",
-    "RabbitMQ": ""
+    "RabbitMQ": "",
+    "ServiceBus": ""
   },
   "MongoDBName": "",
   "RabbitMQ": {
     "QueueName": ""
+  },
+  "AzureServiceBus": {
+    "TopicName": "",
+    "SubscriptionName": ""
   },
   "EnvironmentName": "DEV",
   "ServiceName": "ReportCenterRestServer",
