--- a/src/Providers/ReportCenter.RabbitMQ/ReportCenter.RabbitMQ.csproj
+++ b/src/Providers/ReportCenter.RabbitMQ/ReportCenter.RabbitMQ.csproj
@@ -10,11 +10,13 @@
     <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.8" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\ReportCenter.Common\ReportCenter.Common.csproj" />
-    <ProjectReference Include="..\..\Core\ReportCenter.Core\ReportCenter.Core.csproj" />
   </ItemGroup>
 
 </Project>
