--- a/src/Apps/ReportCenter.App.GrpcServer/ReportCenter.App.GrpcServer.csproj
+++ b/src/Apps/ReportCenter.App.GrpcServer/ReportCenter.App.GrpcServer.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\..\Providers\ReportCenter.CustomConsoleFormatter\ReportCenter.CustomConsoleFormatter.csproj" />
     <ProjectReference Include="..\..\Providers\ReportCenter.OpenTelemetry\ReportCenter.OpenTelemetry.csproj" />
     <ProjectReference Include="..\..\Providers\ReportCenter.RabbitMQ\ReportCenter.RabbitMQ.csproj" />
+    <ProjectReference Include="..\..\Providers\ReportCenter.AzureServiceBus\ReportCenter.AzureServiceBus.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.64.0" />
