Concluído exemplo para biggest report e outros ajustes

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ appsettings.*.json
 # Resources file
 *.resources
 
+# result report
+tmp/
+
 # Common node modules locations
 /node_modules
 /wwwroot/node_modules
