--- a/src/Apps/ReportCenter.App.RestServer/ReportCenter.App.RestServer.csproj
+++ b/src/Apps/ReportCenter.App.RestServer/ReportCenter.App.RestServer.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\..\Providers\ReportCenter.OpenTelemetry\ReportCenter.OpenTelemetry.csproj" />
     <ProjectReference Include="..\..\Providers\ReportCenter.Swagger\ReportCenter.Swagger.csproj" />
     <ProjectReference Include="..\..\Providers\ReportCenter.Scalar\ReportCenter.Scalar.csproj" />
+    <ProjectReference Include="..\..\Providers\ReportCenter.LocalStorage\ReportCenter.LocalStorage.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
