Azure blob storage + Rotas para processsamento externo + extras

--- a/src/Apps/ReportCenter.App.Domain.Application.Worker/appsettings.json
+++ b/src/Apps/ReportCenter.App.Domain.Application.Worker/appsettings.json
@@ -3,7 +3,8 @@
     "CoreDbContext": "",
     "GrpcServer": "",
     "RabbitMQ": "",
-    "ServiceBus": ""
+    "ServiceBus": "",
+    "BlobStorage": ""
   },
   "MongoDBName": "",
   "RabbitMQ": {
@@ -12,6 +13,9 @@
   "AzureServiceBus": {
     "TopicName": "",
     "SubscriptionName": ""
+  },
+  "AzureBlobStorage": {
+    "ContainerName": ""
   },
   "EnvironmentName": "DEV",
   "ServiceName": "ReportCenterExportWorker",
