--- a/src/Apps/ReportCenter.App.RestServer/appsettings.json
+++ b/src/Apps/ReportCenter.App.RestServer/appsettings.json
@@ -2,11 +2,15 @@
   "ConnectionStrings": {
     "CoreDbContext": "",
     "RabbitMQ": "",
-    "ServiceBus": ""
+    "ServiceBus": "",
+    "BlobStorage": ""
   },
   "MongoDBName": "",
   "RabbitMQ": {
     "QueueName": ""
+  },
+  "AzureBlobStorage": {
+    "ContainerName": ""
   },
   "AzureServiceBus": {
     "TopicName": "",
