--- a/src/Apps/ReportCenter.App.Domain.Application.Worker/ReportCenter.App.Domain.Application.Worker.csproj
+++ b/src/Apps/ReportCenter.App.Domain.Application.Worker/ReportCenter.App.Domain.Application.Worker.csproj
@@ -26,7 +26,8 @@
     <ProjectReference Include="..\..\Providers\ReportCenter.CustomStringLocalizer\ReportCenter.CustomStringLocalizer.csproj" />
     <ProjectReference Include="..\..\Providers\ReportCenter.CustomConsoleFormatter\ReportCenter.CustomConsoleFormatter.csproj" />
     <ProjectReference Include="..\..\Providers\ReportCenter.OpenTelemetry\ReportCenter.OpenTelemetry.csproj" />
-    <ProjectReference Include="..\..\Providers\ReportCenter.LocalStorage\ReportCenter.LocalStorage.csproj" />
+    <ProjectReference Include="..\..\Providers\ReportCenter.LocalStorages\ReportCenter.LocalStorages.csproj" />
+    <ProjectReference Include="..\..\Providers\ReportCenter.AzureBlobStorages\ReportCenter.AzureBlobStorages.csproj" />
   </ItemGroup>
 
   <ItemGroup>
