--- a/src/Apps/ReportCenter.App.Domain.Application.Worker/appsettings.json
+++ b/src/Apps/ReportCenter.App.Domain.Application.Worker/appsettings.json
@@ -8,10 +8,12 @@
   },
   "MongoDBName": "",
   "RabbitMQ": {
-    "QueueName": ""
+    "ProgressQueueName": "",
+    "ProcessesQueueName": ""
   },
   "AzureServiceBus": {
-    "TopicName": "",
+    "ProgressTopicName": "",
+    "ProcessesTopicName": "",
     "SubscriptionName": ""
   },
   "AzureBlobStorage": {
