--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -8,16 +8,20 @@ services:
     volumes:
       - ..:/workspace:cached
     working_dir: /workspace
-    depends_on:
-      - mongo
-      - rabbitmq
     environment:
       - DOTNET_USE_POLLING_FILE_WATCHER=1
     command: sleep infinity
 
+  aspire:
+    image: mcr.microsoft.com/dotnet/aspire-dashboard:9.1
+    ports:
+      - "18888:18888"     # Dashboard UI
+      - "18889:18889"     # OpenTelemetry data
+    environment:
+      - DOTNET_DASHBOARD_UNSECURED_ALLOW_ANONYMOUS=true
+
   mongo:
     image: mongo:latest
-    restart: always
     ports:
       - "27017:27017"
     volumes:
@@ -25,13 +29,12 @@ services:
 
   rabbitmq:
     image: rabbitmq:3-management
-    restart: always
     ports:
       - "5672:5672"     # Porta padrão do broker
       - "15672:15672"   # Porta do painel de controle
     environment:
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
     volumes:
       - dev-container:/data/rabbit
 
