Implementação inicial OAuth gRPC <- worker

--- a/src/Apps/ReportCenter.App.Domain.Application.Worker/ReportCenter.App.Domain.Application.Worker.csproj
+++ b/src/Apps/ReportCenter.App.Domain.Application.Worker/ReportCenter.App.Domain.Application.Worker.csproj
@@ -27,6 +27,7 @@
     <ProjectReference Include="..\..\Providers\ReportCenter.OpenTelemetry\ReportCenter.OpenTelemetry.csproj" />
     <ProjectReference Include="..\..\Providers\ReportCenter.LocalStorages\ReportCenter.LocalStorages.csproj" />
     <ProjectReference Include="..\..\Providers\ReportCenter.AzureBlobStorages\ReportCenter.AzureBlobStorages.csproj" />
+    <ProjectReference Include="..\..\Providers\ReportCenter.OAuth\ReportCenter.OAuth.csproj" />
   </ItemGroup>
 
   <ItemGroup>
