--- a/src/Apps/ReportCenter.App.Domain.Application.Worker/appsettings.json
+++ b/src/Apps/ReportCenter.App.Domain.Application.Worker/appsettings.json
@@ -21,6 +21,13 @@
   },
   "EnvironmentName": "DEV",
   "ServiceName": "ReportCenterExportWorker",
+  "OAuth": {
+    "ClientId": "",
+    "ClientSecret": "",
+    "Audience": "",
+    "Scopes": "",
+    "UrlToken": ""
+  },
   "ReportWorker": {
     "ReportType": 0,
     "Domain": "",
@@ -31,24 +38,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "Console": {
-      "FormatterName": "JsonCustom",
-      "FormatterOptions": {
-        "IncludeScopes": false,
-        "IncludeDetails": false,
-        "EnvironmentName": "DEV",
-        "ServiceName": "ReportCenterExportWorker",
-        "JsonWriterOptions": {
-          "Indented": false
-        }
-      }
     }
   },
   "OpenTelemetry": {
     "Logging": {
-      "Enable": false,
-      "ConsoleExporter": false,
+      "Enable": true,
+      "ConsoleExporter": true,
       "OtlpExporter": {
         "Endpoint": ""
       }
