--- a/src/Apps/ReportCenter.App.GrpcServer/appsettings.json
+++ b/src/Apps/ReportCenter.App.GrpcServer/appsettings.json
@@ -8,24 +8,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "Console": {
-      "FormatterName": "JsonCustom",
-      "FormatterOptions": {
-        "IncludeScopes": false,
-        "IncludeDetails": false,
-        "EnvironmentName": "DEV",
-        "ServiceName": "ReportCenterGrpcServer",
-        "JsonWriterOptions": {
-          "Indented": false
-        }
-      }
     }
   },
   "OpenTelemetry": {
     "Logging": {
-      "Enable": false,
-      "ConsoleExporter": false,
+      "Enable": true,
+      "ConsoleExporter": true,
       "OtlpExporter": {
         "Endpoint": ""
       }
