Implementado OAuth na chamada do servidor gRPC

--- a/src/Apps/ReportCenter.App.GrpcServer/appsettings.json
+++ b/src/Apps/ReportCenter.App.GrpcServer/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "ConnectionStrings": {
-    "CoreDbContext": ""
-  },
   "EnvironmentName": "DEV",
   "ServiceName": "ReportCenterGrpcServer",
+  "Authentication": {
+    "Bearer": {
+      "Authority": "",
+      "Audience": ""
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
