--- a/src/Apps/ReportCenter.App.Domain.Application.Worker/appsettings.json
+++ b/src/Apps/ReportCenter.App.Domain.Application.Worker/appsettings.json
@@ -43,24 +43,15 @@
   "OpenTelemetry": {
     "Logging": {
       "Enable": true,
-      "ConsoleExporter": true,
-      "OtlpExporter": {
-        "Endpoint": ""
-      }
+      "ConsoleExporter": true
     },
     "Tracing": {
       "Enable": false,
-      "ConsoleExporter": false,
-      "OtlpExporter": {
-        "Endpoint": ""
-      }
+      "ConsoleExporter": false
     },
     "Metrics": {
       "Enable": false,
-      "ConsoleExporter": false,
-      "OtlpExporter": {
-        "Endpoint": ""
-      }
+      "ConsoleExporter": false
     }
   }
 }
