--- a/src/Apps/ReportCenter.App.GrpcServer/appsettings.json
+++ b/src/Apps/ReportCenter.App.GrpcServer/appsettings.json
@@ -16,24 +16,15 @@
   "OpenTelemetry": {
     "Logging": {
       "Enable": true,
-      "ConsoleExporter": true,
-      "OtlpExporter": {
-        "Endpoint": ""
-      }
+      "ConsoleExporter": true
     },
     "Tracing": {
       "Enable": false,
-      "ConsoleExporter": false,
-      "OtlpExporter": {
-        "Endpoint": ""
-      }
+      "ConsoleExporter": false
     },
     "Metrics": {
       "Enable": false,
-      "ConsoleExporter": false,
-      "OtlpExporter": {
-        "Endpoint": ""
-      }
+      "ConsoleExporter": false
     }
   },
   "Kestrel": {
