--- a/src/Apps/ReportCenter.App.RestServer/appsettings.json
+++ b/src/Apps/ReportCenter.App.RestServer/appsettings.json
@@ -29,24 +29,15 @@
   "OpenTelemetry": {
     "Logging": {
       "Enable": true,
-      "ConsoleExporter": true,
-      "OtlpExporter": {
-        "Endpoint": ""
-      }
+      "ConsoleExporter": true
     },
     "Tracing": {
       "Enable": false,
-      "ConsoleExporter": false,
-      "OtlpExporter": {
-        "Endpoint": ""
-      }
+      "ConsoleExporter": false
     },
     "Metrics": {
       "Enable": false,
-      "ConsoleExporter": false,
-      "OtlpExporter": {
-        "Endpoint": ""
-      }
+      "ConsoleExporter": false
     }
   },
   "SupportedCultures": "pt-BR, en",
